# rspc-prisma-vercel

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vercel.json
.cargo/: config.toml
.github/actions/generate-prisma-client/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: cache-factory.yaml  ci.yaml
api/rspc/: [rspc].rs
pages/: index.tsx  using-use-mutation.tsx  using-use-query.tsx
prisma/: Cargo.toml  schema.prisma
src/: bindings.ts  rspc.ts
src-rust/: lib.rs  prisma.rs
